--- a/app/animations.css
+++ b/app/animations.css
@@ -23,9 +23,9 @@
     border-right: .15em solid white; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
+    letter-spacing: .15em; 
     animation: 
-      typing 10s infinite,
+      typing 7s infinite,
       blink-caret .9s step-end infinite;
   }
   /* The typing effect */
